# vagalume

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  THANKS  TODO  TRANSLATORS  autogen.sh  build-gnome-package.sh  build-maemo-package.sh  build-package.sh  configure.ac  lastfm.desktop  lastfm.service  vagalume.1  vagalume.desktop  vagalume.service  vagalume.spec  vagalumectl.1
contrib/: vagalumectl
data/: servers.xml  servers.xml.in  vagalume-rfs.sh.in  vagalume-sb-plugin.desktop  vagalume.conf.in  vagalume.desktop  vagalume.desktop.in  vagalume.desktop.in.in  vagalume.desktop.maemo  vagalume.desktop.moblin  vagalume.service  vagalume.service.in
data/icons/: vagalume.xpm
debian/: changelog  control  control.maemo  control.maemo2  control.maemo3  control.maemo4  control.maemo5  copyright  docs  gconf-defaults  menu  rules  vagalume.links.in  vagalume.postrm  watch
debian/patches/: 01-fall-back-old-api.diff  02-fix-dead-assignment.diff  03-spanish-translation.diff  04-portuguese-translation.diff  05-russian-translation.diff  06-copyright-year.diff  librefm.diff  series
maemo/: vagalume.desktop
moblin/: create-moblin-vagalume-button.sh  vagalume.desktop
po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  de.po  es.po  es_MX.po  es_VE.po  fi.po  fr.po  gl.po  it.po  lv.po  pl.po  pt.po  pt_BR.po  ru.po  vagalume.pot
scripts/: vagalumectl
src/: Makefile  Makefile.am  audio.c  audio.h  compat.c  compat.h  connection.c  connection.h  controller.c  controller.h  dbus.c  dbus.h  dlwin.c  dlwin.h  gen-bp.sh  globaldefs.h  http.c  http.h  imstatus.c  imstatus.h  lastfm-ws.c  lastfm-ws.h  main.c  mainwin.c  mainwin.h  metadata.c  metadata.h  playlist.c  playlist.h  protocol.c  protocol.h  radio.c  radio.h  scrobbler.c  scrobbler.h  tags.c  tags.h  uimisc-gtk.c  uimisc-hildon22.c  uimisc.c  (+30 more)
src/imstatus/: imgajim.c  imgajim.h  imgossip.c  imgossip.h  impidgin.c  impidgin.h  imstatus.c  imstatus.h  imtelepathy.c  imtelepathy.h
src/windows/: resource.rc
windows/: english.nsh  script-full.nsi  script-minimal.nsi  spanish.nsh
